# DCL_ClBasic

./: CMakeLists.txt
src/: CMakeLists.txt
src/Components/: CMakeLists.txt
src/Components/ClSIFT/: CMakeLists.txt  ClSIFT.cpp  ClSIFT.hpp
src/Components/ClSIFT/OpenCL/: BlurGaussFilter.cl  DetectExtrema.cl  Subtract.cl
src/Types/: CMakeLists.txt
src/Types/Circles/: CMakeLists.txt
src/cmake/Modules/: FindOpenCL.cmake
tasks/: SIFT.xml
